<resources>
    <string name="app_name">Coolometer</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Measure your cooling</string>

    <string name="generic_accept">Accept</string>
    <string name="generic_choose">Choose</string>
    <string name="generic_close">Close</string>
    <string name="generic_okay">Okay</string>
    <string name="general_error_text">The error has already been transmitted to the competent authorities</string>

    <string name="main_single_achievement">You received the new achievement</string>
    <string name="main_many_achievements">You received the new achievements</string>

    <string name="alert_dialog_already_received_title">Hold on</string>
    <string name="alert_dialog_already_received_text">You have already received score for this message</string>
    <string name="alert_dialog_choice_title">You have several messages</string>
    <plurals name="alert_dialog_received_score">
        <item quantity="one">%1$s&#160;point</item>
        <item quantity="other">%1$s&#160;points</item>
    </plurals>

    <string name="debug_notification_channel_name">Debug channel</string>
    <string name="debug_notification_channel_description">Channel for notification from the debug panel</string>
    <string name="debug_cool_button_text">Cheat up!</string>
    <string name="debug_cool_button_hint">Cheat points</string>
    <string name="debug_panel_title">Debug panel</string>
    <string name="debug_panel_fake_notification">Send fake notification</string>
    <string name="debug_panel_fake_message">Add fake message</string>
    <string name="debug_panel_confetti">Drop confetti</string>
    <string name="debug_panel_enable_buttons">Enable debug buttons</string>
    <string name="debug_panel_widget_offer">Was it suggested to install the widget on the home screen</string>
    <string name="debug_panel_first_entrance">Is it the first entrance to the app</string>
    <string name="debug_panel_big_ticks_count">Big ticks count</string>
    <string name="debug_panel_small_ticks_count">Small ticks count</string>
    <string name="debug_panel_truncate">Truncate yourself!</string>
    <string name="debug_panel_delete_fakes">Delete fake message from database</string>
    <string name="debug_panel_copy_token">Copy the token</string>
    <string name="debug_panel_copy_token_label">Token has copied</string>
    <string name="debug_panel_copy_token_fail">There is no token yet. Check your internet connection</string>

    <string name="permissions_rational_title">Get notified!</string>
    <string name="permissions_rational_text">In order to get reminders about your coolness, you should grant permission for notifications</string>
    <string name="permissions_rational_angry_title">Hold on</string>
    <string name="permissions_rational_angry_text">What do you mean &#171;Nope&#187;? You ought to click on &#171;Grant&#187;</string>
    <string name="permissions_rational_very_angry_title">Seriously?</string>
    <string name="permissions_rational_very_angry_text">Did you forbid the display of the request for permissions at all? Well, now go into the settings yourself</string>
    <string name="permission_button_settings">Open settings</string>
    <string name="permission_button_grant">Grant</string>
    <string name="permission_button_deny">Nope</string>

    <string name="history_table_header_score">Score:</string>
    <string name="history_table_header_text">Description:</string>
    <string name="history_table_header_date">Date:</string>
    <string name="history_table_header_empty">There is no data yet.\n\nWait, are you going through the trash again?</string>
</resources>