<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.main.MainActivity"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/history_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:backgroundTint="@color/primaryColor"
        app:srcCompat="@drawable/ic_history"
        app:tint="@color/primaryTextColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@null"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"
        tools:viewBindingIgnore="true"
        />

    <dv.trubnikov.coolometer.ui.views.ProgressMeterView
        android:id="@+id/progressMeter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/h_guideline"
        app:layout_constraintBottom_toTopOf="@id/fab"
        custom:gravity="top"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/main_single_achievement"
        app:icon="@drawable/ic_msg_1"
        app:layout_constraintBottom_toTopOf="@id/debug_cool_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/debug_cool_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/debug_cool_button_hint"
        android:textColorHint="@color/secondaryDarkColor"
        app:boxStrokeColor="@color/secondaryDarkColor"
        app:endIconDrawable="@drawable/ic_progress"
        app:endIconMode="custom"
        app:endIconTint="@color/secondaryDarkColor"
        app:hintTextColor="@color/secondaryDarkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/debug_cool_button"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/debug_cool_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondaryDarkColor"
            android:inputType="numberSigned"
            android:text="+150"
            android:textColor="@color/primaryTextColor"
            tools:ignore="HardcodedText"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/debug_cool_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="numberSigned"
        android:text="@string/debug_cool_button_text"
        android:textColor="@color/secondaryTextColor"
        app:backgroundTint="@color/secondaryDarkColor"
        app:layout_constraintBottom_toBottomOf="@id/debug_cool_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/debug_cool_edit"
        app:layout_constraintTop_toTopOf="@id/debug_cool_edit"
        />

    <FrameLayout
        android:id="@+id/debug_listener"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/debug_panel_hint"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/image_cross"
        android:alpha="0.5"
        android:scaleType="fitCenter" />

</androidx.constraintlayout.widget.ConstraintLayout>